--- a/deployment/docker/nginx/nginx.conf
+++ b/deployment/docker/nginx/nginx.conf
@@ -3,14 +3,15 @@ server {
   server_name localhost;
 
   root /usr/share/nginx/html;
-  index index.html index.htm;
+  index index.html;
 
   location / {
     try_files $uri $uri/ /index.html;
   }
 
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
+  location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|ttf|woff|woff2)$ {
+    expires 1y;
+    access_log off;
+    add_header Cache-Control "public, no-transform";
   }
 }
