--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.3.1",
     "axios": "^1.6.2",
     "rss-parser": "^3.13.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
