--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,19 @@
   "author": "DevFinds",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "axios": "^1.6.2",
+    "cheerio": "^1.1.2",
+    "cors": "^2.8.5",
     "discord.js": "^14.14.1",
-    "passport": "^0.7.0",
-    "passport-discord": "^0.1.4",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
-    "rss-parser": "^3.13.0",
-    "node-cron": "^3.0.3"
+    "mongoose": "^8.0.3",
+    "node-cron": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
