--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "discord-dashboard-frontend",
-  "version": "1.0.0",
-  "description": "Discord Admin Panel Frontend",
+  "name": "devfinds-discord-admin-panel-frontend",
+  "version": "2.0.0",
+  "description": "DevFinds Discord Admin Panel - Modern React frontend for Discord server management",
   "private": true,
+  "homepage": ".",
+  "author": "DevFinds <findsdev@gmail.com>",
+  "keywords": ["discord", "admin-panel", "react", "bot", "server-management", "devfinds"],
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "npm run build && npx serve -s build"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
@@ -23,5 +27,9 @@
     "production": [">0.2%", "not dead", "not op_mini all"],
     "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  }
 }
