--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devfinds-discord-admin-panel-frontend",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "DevFinds Discord Admin Panel - Modern React frontend for Discord server management",
   "private": true,
   "homepage": "/",
@@ -11,7 +11,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "axios": "^1.6.2",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "feather-icons": "^4.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +22,10 @@
     "analyze": "npm run build && npx serve -s build"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
