--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^6.20.1",
     "axios": "^1.6.2",
     "react-icons": "^4.12.0",
-    "feather-icons": "^4.29.0"
+    "feather-icons": "^4.29.2",
+    "classnames": "^2.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +26,8 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
