Add DISCORD_CALLBACK_URL and fix REACT_APP_API_URL in docker-compose

--- a/deployment/docker/docker-compose.prod.yml
+++ b/deployment/docker/docker-compose.prod.yml
@@ -19,6 +19,7 @@ services:
       - DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
       - DISCORD_CLIENT_SECRET=${DISCORD_CLIENT_SECRET}
       - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
+      - DISCORD_CALLBACK_URL=http://localhost:5000/auth/discord/callback
       - JWT_SECRET=${JWT_SECRET}
       - SESSION_SECRET=${SESSION_SECRET}
       - FRONTEND_URL=http://localhost:3000
@@ -37,6 +38,7 @@ services:
       - DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
       - DISCORD_CLIENT_SECRET=${DISCORD_CLIENT_SECRET}
       - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
+      - DISCORD_CALLBACK_URL=http://localhost:5000/auth/discord/callback
       - JWT_SECRET=${JWT_SECRET}
       - SESSION_SECRET=${SESSION_SECRET}
       - FRONTEND_URL=http://localhost:3000
@@ -48,7 +50,7 @@ services:
     ports:
       - "3000:80"
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:3000}
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:5000}
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
